--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     env_file:
       - ./.env
   web:
-    build: .
+    image: pfanenshtil/yamdb_final:latest
     restart: always
     volumes:
       - static_value:/code/static/
